RESOLVED FIXED121898
[ATK] Fix style issues in AccessibilityUIElementAtk
https://bugs.webkit.org/show_bug.cgi?id=121898
Summary [ATK] Fix style issues in AccessibilityUIElementAtk
Mario Sanchez Prada
Reported 2013-09-25 02:30:52 PDT
Currently, there are at least two style errors in AccessibilityUIElementAtk (both DRT and WKTR) that would be nice to fix, to avoid further confusion and issues when modifying that file: - ".f" suffixes should not be added to float literals unless strictly needed (and it's not the case) - Use G_VALUE_INIT instead of { 0, { { 0 } } } This is a simple bug just to track that change [1] http://www.webkit.org/coding/coding-style.html
Attachments
Patch proposal (9.11 KB, patch)
2013-09-25 02:34 PDT, Mario Sanchez Prada
cfleizach: review+
Mario Sanchez Prada
Comment 1 2013-09-25 02:34:14 PDT
Created attachment 212546 [details] Patch proposal
Mario Sanchez Prada
Comment 2 2013-09-25 05:32:23 PDT
Note You need to log in before you can comment on or make changes to this bug.